--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,6 +8,10 @@ spring:
     pool:
       initial-size: 5
       max-size: 20
+kafka:
+  enabled: ${KAFKA_ENABLED:false}
+  servers: ${KAFKA_SERVERS:localhost:9092}
+  topic: ${KAFKA_TOPIC:unload-topic}
 
 logging:
   level:
